--- a/src/7zip/Views/Pages/ExtractOperationPage.xaml
+++ b/src/7zip/Views/Pages/ExtractOperationPage.xaml
@@ -7,13 +7,10 @@
     xmlns:local="using:_7zip.Views.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:vm="using:_7zip.ViewModels"
-    d:DataContext="{d:DesignInstance Type=vm:ExtractionViewModel}"
+    xmlns:m ="using:_7zip.Models"
+    d:DataContext="{d:DesignInstance Type=m:OptionModel}"
     Background="Transparent"
     mc:Ignorable="d">
-    <Page.Resources />
-    <!--  Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"  -->
-
-
     <Grid MinHeight="200">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -29,12 +26,12 @@
                 Height="16"
                 Margin="8,0"
                 Source="/Assets/AppIcon.ico" />
-            <TextBlock x:Name="titleTxtBlock" Text="解压缩" />
-            <TextBlock Foreground="{ThemeResource SystemBaseMediumColor}" Text="-" />
+            <TextBlock x:Name="titleTxtBlock" Text="{Binding OptionTitle}" />
+            <!--<TextBlock Foreground="{ThemeResource SystemBaseMediumColor}" Text="-" />
             <TextBlock
                 MaxWidth="240"
                 Foreground="{ThemeResource SystemBaseMediumColor}"
-                Text="{Binding CurrentExtractionInfo.ArchivePath, Converter={StaticResource PathToFileNameConverter}}" />
+                Text="{Binding CurrentExtractionInfo.ArchivePath, Converter={StaticResource PathToFileNameConverter}}" />-->
         </StackPanel>
         <StackPanel
             Grid.Row="1"
@@ -42,36 +39,37 @@
             Orientation="Vertical">
             <Grid>
                 <StackPanel
+                    Margin="0 10 0 0"
                     Orientation="Horizontal"
                     Spacing="5"
-                    Visibility="{Binding IsExtracting}">
-                    <TextBlock Text="正在解压" />
-                    <TextBlock Foreground="{ThemeResource SystemBaseMediumHighColor}" Text="{Binding CurrentExtractingArchiveInfo.FileName}" />
+                    Visibility="{Binding IsProcessing}">
+                    <TextBlock Text="{Binding OptionProcessingText}" />
+                    <TextBlock MaxWidth="280" TextTrimming="CharacterEllipsis" Foreground="{ThemeResource SystemBaseMediumHighColor}" Text="{Binding OptionFileName}" />
                 </StackPanel>
-                <Grid>
-                    <TextBlock Text="解压成功完成。" Visibility="{Binding IsFinished}" />
-                    <TextBlock Text="解压操作已取消。" Visibility="{Binding IsCancelled}" />
-                    <TextBlock Text="正在取消......" Visibility="{Binding IsCancelling}" />
-                    <TextBlock Text="解压已暂停。" Visibility="{Binding IsPaused}" />
-                    <TextBlock Text="正在暂停......" Visibility="{Binding IsPausing}" />
+                <Grid Margin="0 10 0 0">
+                    <TextBlock Text="{Binding SucceedText}" Visibility="{Binding IsFinished}" />
+                    <TextBlock Text="{Binding CancelText}" Visibility="{Binding IsCancelled}" />
+                    <TextBlock Text="{Binding CancelText}" Visibility="{Binding IsCancelling}" />
+                    <TextBlock Text="{Binding PausedText}" Visibility="{Binding IsPaused}" />
+                    <TextBlock Text="{Binding PausingText}" Visibility="{Binding IsPausing}" />
                 </Grid>
 
                 <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
                     <StackPanel.Resources>
                         <Style TargetType="AppBarButton">
                             <Setter Property="Width" Value="40" />
-                            <Setter Property="Height" Value="48" />
+                            <Setter Property="Height" Value="40" />
                             <Setter Property="CornerRadius" Value="4" />
                         </Style>
                     </StackPanel.Resources>
                     <AppBarButton
-                        Command="{Binding TogglePauseCommand}"
+                        Command="{Binding PaussOptionCommand}"
                         Icon="{Binding IsPaused, Converter={StaticResource IsPausedSymbolIconConverter}}"
-                        IsEnabled="{Binding ExtractionStatus, Converter={StaticResource IsStringContainedByConverter}, ConverterParameter=None|Extracting|Paused}" />
+                        IsEnabled="{Binding ExtractionStatus, Converter={StaticResource IsStringContainedByConverter}, ConverterParameter=None|OptionProcessing|Paused}" />
                     <AppBarButton
-                        Command="{Binding CancelWorkCommand}"
+                        Command="{Binding CancelOptionCommand}"
                         Icon="Cancel"
-                        IsEnabled="{Binding ExtractionStatus, Converter={StaticResource IsStringContainedByConverter}, ConverterParameter=None|Extracting|Paused|Pausing}" />
+                        IsEnabled="{Binding ExtractionStatus, Converter={StaticResource IsStringContainedByConverter}, ConverterParameter=None|OptionProcessing|Paused|Pausing}" />
                 </StackPanel>
             </Grid>
 
@@ -81,7 +79,7 @@
                 Maximum="1"
                 ShowError="False"
                 ShowPaused="False"
-                Value="{Binding ExtractPercentage}" />
+                Value="{Binding OptionPercentage}" />
 
             <Grid Margin="0,3,0,0" HorizontalAlignment="Stretch">
                 <StackPanel
@@ -89,13 +87,13 @@
                     Orientation="Horizontal"
                     Spacing="1">
                     <TextBlock Foreground="{ThemeResource SystemBaseMediumColor}" Text="文件" />
-                    <TextBlock Margin="5,0,0,0" Text="{Binding ExtractedFilesCount}" />
+                    <TextBlock Margin="5,0,0,0" Text="{Binding OptionedFileCount}" />
                     <TextBlock Text="/" />
                     <TextBlock Text="{Binding TotalFilesCount}" />
 
                 </StackPanel>
                 <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
-                    <TextBlock Text="{Binding ExtractPercentage, Converter={StaticResource BasicCalculateConverter}, ConverterParameter=*100}" />
+                    <TextBlock Text="{Binding OptionPercentage, Converter={StaticResource BasicCalculateConverter}, ConverterParameter=*100}" />
                     <TextBlock Text="%" />
                 </StackPanel>
             </Grid>
